--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "yutil.js",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A simple package with useful functions for JavaScript",
   "main": "index.js",
   "scripts": {},
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Yumiko0828/Yutil.git"
+    "url": "git+https://github.com/Yumiko0828/yutil.js"
   },
   "keywords": [
     "Yutil",
@@ -22,7 +22,7 @@
   "author": "Yasu Yumiko",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/Yumiko0828/Yutil/issues"
+    "url": "https://github.com/Yumiko0828/yutil.js/issues"
   },
-  "homepage": "https://github.com/Yumiko0828/Yutil#readme"
+  "homepage": "https://github.com/Yumiko0828/yutil.js#readme"
 }
