--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,12 @@
 {
   "compilerOptions": {
-    "target": "ES5",
+    "target": "ES6",
     "module": "CommonJS",
     "declaration": true,
-    "outDir": "./lib",
-    "strict": true
+    "outDir": "./dist",
+    "strict": true,
+    "noUnusedLocals": true,
+    "noImplicitAny": true
   },
-  "include": ["src"],
+  "include": ["src"]
 }
